--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,13 +42,6 @@
                     <% @totals.each_pair do |k,v| %>
                     [ '<%= k.capitalize %>', <%= v %> ],
                     <% end %>
-                    //[ 'Potentially Vulnerable', 110] , 
-                    //['Refused', 97],
-                    //['Withdrawn', 381],
-                    //['Lost', 265],  
-                    //['Withdrawn by PI', 301],
-                    //['Completed', 165],  
-                    
                     ]);
                 
                 // Create and draw the visualization.
@@ -69,28 +62,16 @@
                 data.addColumn('date', 'Day');
                 data.addColumn('number', 'Enrolled');
                 data.addColumn('number', 'Projected');
-
-                data.addRows([
-                  [new Date(2012, 0, 1),  100,      100],
-                  [new Date(2012, 0, 2),  130,      110],
-                  [new Date(2012, 0, 3),  142,      120],
-                  [new Date(2012, 0, 4),  146,      130],
-                  [new Date(2012, 0, 5),  150,      140],
-                  [new Date(2012, 0, 6),  160,      150],
-                  [new Date(2012, 0, 7),  167,      160],
-                  [new Date(2012, 0, 8),  171,      170],
-                  [new Date(2012, 0, 9),  200,      180],
-                  [new Date(2012, 0, 10),  205,      190],
-                  [new Date(2012, 0, 11),  210,      200],
-                  [new Date(2012, 0, 12),  214,      210],
-                  [new Date(2012, 0, 13),  218,      220],
-                  [new Date(2012, 0, 14),  ,      230],
-                  [new Date(2012, 0, 15),  ,      240],
-                  [new Date(2012, 0, 16),  ,      250],
-                  [new Date(2012, 0, 17),  ,      260],
-                  [new Date(2012, 0, 18),  ,      270],
-                  [new Date(2012, 0, 19),  ,      280]
-                ]);
+                  data.addRows([
+                    <% @entries.each do |entry| %> 
+                    [new Date (<%= entry.input_at.year%>, <%= entry.input_at.mon%>, <%= entry.input_at.mday%>),  
+                      <%= entry.enrolled %>,  100],
+                  //[new Date(2012, 0, 2),  130,      110],
+                  //[new Date(2012, 0, 3),  142,      120],
+                  //[new Date(2012, 0, 4),  146,      130],
+                  //[new Date(2012, 0, 5),  150,      140]
+                    <% end%>
+                  ]);
 
                 var options = {
                   width:500, height:400,
@@ -110,25 +91,10 @@ var data2 = new google.visualization.DataTable();
                 data2.addColumn('number', 'Projected');
 
                 data2.addRows([
-                  [new Date(2012, 0, 1),  50,      50],
-                  [new Date(2012, 0, 2),  62,      55],
-                  [new Date(2012, 0, 3),  70,      60],
-                  [new Date(2012, 0, 4),  72,      65],
-                  [new Date(2012, 0, 5),  78,      70],
-                  [new Date(2012, 0, 6),  86,      75],
-                  [new Date(2012, 0, 7),  90,      80],
-                  [new Date(2012, 0, 8),  96,      85],
-                  [new Date(2012, 0, 9),  100,      90],
-                  [new Date(2012, 0, 10),  105,      95],
-                  [new Date(2012, 0, 11),  110,      100],
-                  [new Date(2012, 0, 12),  113,      110],
-                  [new Date(2012, 0, 13),  114,      115],
-                  [new Date(2012, 0, 14),  ,      120],
-                  [new Date(2012, 0, 15),  ,      125],
-                  [new Date(2012, 0, 16),  ,      130],
-                  [new Date(2012, 0, 17),  ,      135],
-                  [new Date(2012, 0, 18),  ,      140],
-                  [new Date(2012, 0, 19),  ,      145]
+                 <% @entries.each do |entry| %> 
+                    [new Date (<%= entry.input_at.year%>, <%= entry.input_at.mon%>, <%= entry.input_at.mday%>),  
+                      <%= entry.withdrawn %>,  100],
+                  <% end%>
                 ]);
 
 
