--- a/app/views/home/_view_trends.html.erb
+++ b/app/views/home/_view_trends.html.erb
@@ -28,76 +28,44 @@
 
 
 <ul class="nav nav-pills">
-  <li class="active">
-    <a href="#enrolled" data-toggle="pill">Enrolled</a>
-  </li>
-  <li><a href="#withdrawn" data-toggle="pill">Withdrawn</a></li>
-  <li><a href="#" data-toggle="pill">Vulnerable</a></li>
-  <li><a href="#" data-toggle="pill">Refused</a></li>
-  <li><a href="#" data-toggle="pill">Lost</a></li>
+  <li class="active"><a href="#enrolled" data-toggle="pill">Enrolled</a></li>
+    <li><a href="#active" data-toggle="pill">Active</a></li>
+      <li><a href="#completed" data-toggle="pill">Completed</a></li>
+    <li><a href="#withdrawn" data-toggle="pill">Withdrawn</a></li>
+  <li><a href="#refused" data-toggle="pill">Refused</a></li>
+  <li><a href="#lost" data-toggle="pill">Lost</a></li>
 </ul>
 
+<div class="tab-content">
 <!-- start tab content -->
 
-<div class="tab-content">
-    <div class="tab-pane fade in active" id="enrolled">
+<% @totals_by_week.each_pair do |category, data| %> 
 
-<div class="row-fluid">
-    <div class= "span8">
+<div class="tab-pane fade in active" id="<%=category %>">
 
-        <h4>Subjects Enrolled</h4> 
-         <div id="line_chart"></div>
-     </div>
-     <div class= "span4">
+    <div class="row-fluid">
+        <div class= "span8">
+
+        <h4>Subjects <%=category %></h4> 
+         <div id="<%=category + '_chart' %>"></div>
+        </div>
+
+    <div class= "span4">
 
          <table class="table table-condensed table-hover" style="display:inline; float:right; margin-top:10px">
-            <tr style="border-top: 2px solid #ccc;"><th style = "font-size:14px;">Total Enrolled</th><td style = "font-size:14px; text-align: right;">218</td></tr>
+            <tr style="border-top: 2px solid #ccc;"><th style = "font-size:14px;">Total <%=category %></th><td style = "font-size:14px; text-align: right;">218</td></tr>
             <tr><th style = "font-size:14px;">Goal</th><td style = "font-size:14px; text-align: right;">300</td></tr>
             <tr><th style = "font-size:14px">Avg/Month</th><td style = "font-size:14px; text-align: right;">62.5</td></tr>
             <tr><th style = "font-size:14px">Avg/Week</th><td style = "font-size:14px; text-align: right;">19.3</td></tr>
             <tr><th style = "font-size:14px">Est. by Jan 19th</th><td style = "font-size:14px; text-align: right;"> 280</td></tr>
 
-</table>
-</div>
-</div>
-     </div> <!-- end Enrolled content -->
+         </table>
+    </div>
+    </div>
+</div> <!-- end Category content -->
 
+<% end %>
 
-<div class="tab-pane fade" id="withdrawn">
-  <div class="row-fluid">
-    <div class= "span8">
-        <h4>Subjects Withdrawn</h4> 
-         <div id="line_chart_withdrawn"></div>
-     </div>
-
-         <div class= "span4">
-
-         <table class="table table-condensed table-hover" style="display:inline; float:right; margin-top:10px">
-            <tr style="border-top: 2px solid #ccc;"><th style = "font-size:14px;">Total Withdrawn</th><td style = "font-size:14px; text-align: right;">113</td></tr>
-            <tr><th style = "font-size:14px;">Goal</th><td style = "font-size:14px; text-align: right;">NA</td></tr>
-            <tr><th style = "font-size:14px">Avg/Month</th><td style = "font-size:14px; text-align: right;">10.4</td></tr>
-            <tr><th style = "font-size:14px">Avg/Week</th><td style = "font-size:14px; text-align: right;">2.1</td></tr>
-            <tr><th style = "font-size:14px">Est. by Jan 19th</th><td style = "font-size:14px; text-align: right;"> 145</td></tr>
-
-        </table>
-        </div>
-     </div>
- </div>
-
-
-     <div class="tab-pane fade" id="vulnerable">
-        <h4>Subjects Vulnerable</h4> 
-            <div id="line_chart_vulnerable"></div>
-     </div>
-     <div class="tab-pane fade" id="refused">
-        <h4>Subjects Refused</h4> 
-            <div id="line_chart_vulnerable"></div>
-     </div>
-     <div class="tab-pane fade" id="lost">
-        <h4>Subjects Lost</h4> 
-            <div id="line_chart_vulnerable"></div>
-     </div>
-         
     </div> <!-- end tab content -->
 
 </div>
