--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -16,6 +16,7 @@
 
   <div class="span6" style = "margin-bottom:15px; padding-left:30px; border-left: 1px solid #eeeeee">
     <h4>Create a new Trial</h4>
+    <%= render :partial => "/trials/form" %>
     <form>
         <fieldset>
             <input class="span8" type="text" placeholder="Trial Name">
