--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -19,6 +19,7 @@
     
     <form>
         <fieldset>
+            <%= render "form" %>
             <input class="span8" type="text" placeholder="Trial Name">
 
             <div class="input-append">
