--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -155,12 +155,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">TrialTracker</a>
+                    <a class="brand" href="#">TrialTracker </a>
+                    
+                    
+
                     <div class="nav-collapse collapse">
                         <p class="navbar-text pull-right">
                         Logged in as <a href="#" class="navbar-link">Username</a>
                         </p>
                         <ul class="nav">
+                             <li> <%=link_to("Splash", splashes_path) %> </li>
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#contact">Contact</a></li>
