--- a/app/views/home/_view_trends.html.erb
+++ b/app/views/home/_view_trends.html.erb
@@ -76,8 +76,8 @@
             <form class="form-inline" action="#" method="post">
                     <div class="btn-group" data-toggle="buttons-checkbox">
                         <button type="button" class="btn btn-inverse active" id = <%= category + '_4_button'%> style = "color:#849CCC" >Progress</button>
-                        <button type="button" class="btn btn-inverse" style = "color:#dc3912" id = <%= category + '_2_button'%>>Projected</button>
-                        <button type="button" class="btn btn-inverse" style = "color:#ff9900" id = <%= category + '_1_button'%>>Target</button>
+                        <button type="button" class="btn btn-inverse" style = "color:#dc3912" id = <%= category + '_2_button'%>>Target</button>
+                        <button type="button" class="btn btn-inverse" style = "color:#ff9900" id = <%= category + '_1_button'%>>Projected</button>
                     </div>
                     
                 </form>
