--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -12,10 +12,14 @@
     <h4>Link an existing Trial</h4>
     <input class="span8" type="text" placeholder="Trial Name" data-provide="typeahead" data-source='["sean", "nikhil", "dan", "ashwin", "shiv"]'>
   </div>
+
+
     
 
   <div class="span6" style = "margin-bottom:15px; padding-left:30px; border-left: 1px solid #eeeeee">
     <h4>Create a new Trial</h4>
+
+    <%= render 'trials/form' %>
     
     <form>
         <fieldset>
@@ -74,3 +78,25 @@ function allTrials(query, process) {
 </script>
 
 <!--**************** End Modal  ************************************-->
+
+  <div id="editTrialModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3 id="myModalLabel">Edit trial</h3>
+  </div>
+
+  <div class="modal-body" height="500px">
+ 
+ 
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
