--- a/app/views/splashes/edit.html.erb
+++ b/app/views/splashes/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @splash %> |
-<%= link_to 'Back', splashes_path %>
+<%= link_to 'Back', splashes_path %> |
+<%= link_to "Home", home_path %>
