--- a/app/views/splashes/show.html.erb
+++ b/app/views/splashes/show.html.erb
@@ -2,4 +2,5 @@
 
 
 <%= link_to 'Edit', edit_splash_path(@splash) %> |
-<%= link_to 'Back', splashes_path %>
+<%= link_to 'Back', splashes_path %> |
+<%=link_to "Home", home_path %>
