--- a/app/views/trials/edit.html.erb
+++ b/app/views/trials/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @trial %> |
-<%= link_to 'Back', trials_path %>
+<%= link_to 'Back', trials_path %> |
+<%= link_to "Home", home_path %> 
