--- a/app/views/trials/show.html.erb
+++ b/app/views/trials/show.html.erb
@@ -12,4 +12,5 @@
 
 
 <%= link_to 'Edit', edit_trial_path(@trial) %> |
-<%= link_to 'Back', trials_path %>
+<%= link_to 'Back', trials_path %> |
+<%= link_to "Home", home_path %> 
