--- a/app/views/home/_make_graph_data.html.erb
+++ b/app/views/home/_make_graph_data.html.erb
@@ -1,4 +1,4 @@
-<% @totals_by_week.each_pair do |category, data| %>
+ <% @categories.each do |category| %>
 var <%= category + '_data'%> = new Array();
 
 var <%= category + '_0_data' %> = new google.visualization.DataTable();
@@ -9,15 +9,14 @@ var <%= category + '_0_data' %> = new google.visualization.DataTable();
                <%= category + '_0_data' %>.addColumn('number', 'Projected');
                   <%= category + '_0_data' %>.addRows([
                     <% $i = 1 %>
-                    <% data.each do |data_point| %>  //data_point is like {:entry => 12}
-                    
-                      <% data_point.each_pair do |entry_date, total_this_week| %> 
+                    <% @entries_oldestFirst.each do |data_point| %>  //data_point is an entry
+                    <% entry_date = data_point.input_at %>
+                      
                         //In JS this would look like: [new Date(2012, 0, 3),  142,      120],
                         
                         [new Date (<%= entry_date.year%>, <%= entry_date.mon%>, <%= entry_date.mday%>),  
                         ,  , ,],
                         
-                      <% end%>
                       <% $i +=1 %> 
                     <% end%>
                   ]);
@@ -31,15 +30,14 @@ var <%= category + '_1_data' %> = new google.visualization.DataTable();
                <%= category + '_1_data' %>.addColumn('number', 'Projected');
                   <%= category + '_1_data' %>.addRows([
                     <% $i = 1 %>
-                    <% data.each do |data_point| %>  //data_point is like {:entry => 12}
-                    
-                      <% data_point.each_pair do |entry_date, total_this_week| %> 
+                    <% @entries_oldestFirst.each do |data_point| %>  //data_point is like {:entry => 12}
+                    <% entry_date = data_point.input_at %>
+                      
                         //In JS this would look like: [new Date(2012, 0, 3),  142,      120],
                         
                         [new Date (<%= entry_date.year%>, <%= entry_date.mon%>, <%= entry_date.mday%>),  
                         ,  , <%= (@averages[category] * $i) %>],
                         
-                      <% end%>
                       <% $i +=1 %> 
                     <% end%>
                   ]);
@@ -54,14 +52,14 @@ var <%= category + '_2_data' %> = new google.visualization.DataTable();
                <%= category + '_2_data' %>.addColumn('number', 'Projected');
                   <%= category + '_2_data' %>.addRows([
                     <% $i = 1 %>
-                    <% data.each do |data_point| %>  //data_point is like {:entry => 12}
-                    
-                      <% data_point.each_pair do |entry_date, total_this_week| %> 
+                   <% @entries_oldestFirst.each do |data_point| %>  //data_point is like {:entry => 12}
+                    <% entry_date = data_point.input_at %>
+
                         //In JS this would look like: [new Date(2012, 0, 3),  142,      120],
                         [new Date (<%= entry_date.year%>, <%= entry_date.mon%>, <%= entry_date.mday%>),  
                         ,  <%= ($i * 10) %>, , ],
                         
-                      <% end%>
+                     
                       <% $i +=1 %> 
                     <% end%>
                   ]);
@@ -76,14 +74,14 @@ var <%= category + '_3_data' %> = new google.visualization.DataTable();
                <%= category + '_3_data' %>.addColumn('number', 'Projected');
                   <%= category + '_3_data' %>.addRows([
                     <% $i = 1 %>
-                    <% data.each do |data_point| %>  //data_point is like {:entry => 12}
-                    
-                      <% data_point.each_pair do |entry_date, total_this_week| %> 
+                    <% @entries_oldestFirst.each do |data_point| %>  //data_point is like {:entry => 12}
+                    <% entry_date = data_point.input_at %>
+
                         //In JS this would look like: [new Date(2012, 0, 3),  142,      120],
                         [new Date (<%= entry_date.year%>, <%= entry_date.mon%>, <%= entry_date.mday%>),  
                          ,  <%= ($i * 10) %>, <%= (@averages[category] * $i) %>],
                         
-                      <% end%>
+                     
                       <% $i +=1 %> 
                     <% end%>
                   ]);
@@ -98,15 +96,15 @@ var <%= category + '_4_data' %> = new google.visualization.DataTable();
                <%= category + '_4_data' %>.addColumn('number', 'Projected');
                   <%= category + '_4_data' %>.addRows([
                     <% $i = 1 %>
-                    <% data.each do |data_point| %>  //data_point is like {:entry => 12}
-                    
-                      <% data_point.each_pair do |entry_date, total_this_week| %> 
+                    <% @entries_oldestFirst.each do |data_point| %>  //data_point is like {:entry => 12}
+                    <% entry_date = data_point.input_at %>
+
                         //In JS this would look like: [new Date(2012, 0, 3),  142,      120],
                         [new Date (<%= entry_date.year%>, <%= entry_date.mon%>, <%= entry_date.mday%>),  
                         
-                        <%= total_this_week %>,  , ,],
+                        <%= data_point[category] %>,  , ,],
                         
-                      <% end%>
+                      
                       <% $i +=1 %> 
                     <% end%>
                   ]);
@@ -121,15 +119,15 @@ var <%= category + '_5_data' %> = new google.visualization.DataTable();
                <%= category + '_5_data' %>.addColumn('number', 'Projected');
                   <%= category + '_5_data' %>.addRows([
                     <% $i = 1 %>
-                    <% data.each do |data_point| %>  //data_point is like {:entry => 12}
-                    
-                      <% data_point.each_pair do |entry_date, total_this_week| %> 
+                    <% @entries_oldestFirst.each do |data_point| %>  //data_point is like {:entry => 12}
+                    <% entry_date = data_point.input_at %>
+
                         //In JS this would look like: [new Date(2012, 0, 3),  142,      120],
                         [new Date (<%= entry_date.year%>, <%= entry_date.mon%>, <%= entry_date.mday%>),  
                         
-                        <%= total_this_week %>,  , <%= (@averages[category] * $i) %>],
+                        <%= data_point[category] %>,  , <%= (@averages[category] * $i) %>],
                         
-                      <% end%>
+                     
                       <% $i +=1 %> 
                     <% end%>
                   ]);
@@ -146,14 +144,14 @@ var <%= category + '_6_data' %> = new google.visualization.DataTable();
                 <%= category + '_6_data' %>.addColumn('number', 'Projected');
                   <%= category + '_6_data' %>.addRows([
                     <% $i = 1 %>
-                    <% data.each do |data_point| %>  //data_point is like {:entry => 12}
-                    
-                      <% data_point.each_pair do |entry_date, total_this_week| %> 
+                    <% @entries_oldestFirst.each do |data_point| %>  //data_point is like {:entry => 12}
+                    <% entry_date = data_point.input_at %>
+
                         //In JS this would look like: [new Date(2012, 0, 3),  142,      120],
                         [new Date (<%= entry_date.year%>, <%= entry_date.mon%>, <%= entry_date.mday%>),  
-                        <%= total_this_week %>,  <%= ($i * 10) %>, ,],
+                        <%= data_point[category] %>,  <%= ($i * 10) %>, ,],
                         
-                      <% end%>
+                      
                       <% $i +=1 %> 
                     <% end%>
                   ]);
@@ -168,14 +166,14 @@ var <%= category + '_7_data' %> = new google.visualization.DataTable();
                <%= category + '_7_data' %>.addColumn('number', 'Projected');
                   <%= category + '_7_data' %>.addRows([
                     <% $i = 1 %>
-                    <% data.each do |data_point| %>  //data_point is like {:entry => 12}
-                    
-                      <% data_point.each_pair do |entry_date, total_this_week| %> 
+<% @entries_oldestFirst.each do |data_point| %>  //data_point is like {:entry => 12}
+                    <% entry_date = data_point.input_at %>
+ 
                         //In JS this would look like: [new Date(2012, 0, 3),  142,      120],
                         [new Date (<%= entry_date.year%>, <%= entry_date.mon%>, <%= entry_date.mday%>),  
-                        <%= total_this_week %>,  <%= ($i * 10) %>, <%= (@averages[category] * $i) %>],
+                        <%= data_point[category] %>,  <%= ($i * 10) %>, <%= (@averages[category] * $i) %>],
                         
-                      <% end%>
+
                       <% $i +=1 %> 
                     <% end%>
                   ]);
